--- a/frontFarm/src/app/pages/ajustes-inventario/ajustes-inventario.component.html
+++ b/frontFarm/src/app/pages/ajustes-inventario/ajustes-inventario.component.html
@@ -377,7 +377,7 @@
         </tbody>
     </table>
     <div class="paginacion">
-        <button (click)="paginaActual = 1" [disabled]="paginaActual === 1" matTooltip="Primera página">
+        <button (click)="paginaActual = 1" [disabled]="paginaActual === 1" matTooltip="Inicio">
             <i class="fa fa-angle-double-left"></i>
         </button>
 
@@ -392,7 +392,7 @@
             <i class="fa fa-angle-right"></i>
         </button>
 
-        <button (click)="paginaActual = totalPaginas" [disabled]="paginaActual === totalPaginas" matTooltip="Última página">
+        <button (click)="paginaActual = totalPaginas" [disabled]="paginaActual === totalPaginas" matTooltip="Fin">
             <i class="fa fa-angle-double-right"></i>
         </button>
     </div>
